# ptr_datalab

./: .gitignore  Dockerfile  README.md  flake.nix  local-cluster.yaml  pyproject.toml  skaffold.yaml  test_settings.py
.github/workflows/: django-test.yml  django.yml  docker-build.yaml
datalab/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
datalab/datalab_session/: admin.py  apps.py  exceptions.py  file_utils.py  filters.py  forms.py  models.py  s3_utils.py  serializers.py  tasks.py  util.py  views.py  viewsets.py
datalab/datalab_session/analysis/: __init__.py  centroiding.py  centroiding_core.py  get_jpg.py  get_tif.py  line_profile.py  raw_data.py  source_catalog.py  variable_star.py  wcs.py
datalab/datalab_session/data_operations/: README.md  aperture_photometry.py  color_image.py  data_operation.py  error.py  fits_file_reader.py  fits_output_handler.py  hr_diagram.py  input_data_handler.py  light_curve.py  light_curve_pipeline.py  long.py  median.py  moving_target_aperture_photometry.py  moving_target_photometry.py  non_sidereal_aperture_photometry.py  noop.py  normalization.py  rgb_stack.py  stacking.py  subtraction.py  util.py  utils.py  variable_star.py
datalab/datalab_session/management/commands/: populate_test_data.py  reconcile_file_cache.py
datalab/datalab_session/migrations/: 0001_initial.py  0002_dataoperation_cache_key.py  0002_dataoperation_message_dataoperation_percent_complete_and_more.py  0003_alter_dataoperation_options_and_more.py
datalab/datalab_session/signals/: handlers.py
datalab/datalab_session/tests/: test_analysis.py  test_aperture_photometry.py  test_api.py  test_data_operation.py  test_light_curve_pipeline.py  test_moving_target_aperture_photometry.py  test_non_sidereal_aperture_photometry.py  test_operations.py  test_period_analysis.py  test_utils.py
datalab/datalab_session/utils/: aperture_light_curve.py  catalog_utils.py  centroiding.py  comparison_calibration.py  comparison_stars.py  diagnostic_images.py  file_utils.py  filecache.py  fits_metadata.py  fits_utils.py  flux_to_mag.py  format.py  gaia.py  geometry.py  moving_target_search.py  period_analysis.py  photometry.py  photometry_diagnostics.py  s3_utils.py  serialization.py  target_track.py  wcs_utils.py
k8s/base/: deploy-server.yaml  deploy-static.yaml  deploy-worker.yaml  kustomization.yaml  pv.yaml  pvc.yaml  svc-server.yaml  svc-static.yaml
k8s/envs/local/: kustomization.yaml  ns.yaml  secrets.env  secrets.env.changeme  settings.env
(+17 files in other folders)
