[tool.poetry]
name = "datalab"
version = "0.1.0"
description = "The backend for the PhotonRanch (PTR) Datalab service"
authors = ["Jon <jnation@lco.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Django = "^4.2.7"
djangorestframework = "^3.14.0"
django-filter = "^23.3.0"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"
drf-nested-routers = "^0.93.4"
ocs-authentication = "^0.2.2"
psycopg2-binary = "^2.9.9"
django-dramatiq = "^0.11.6"
redis = "^5.0.1"
rabbitmq = "^0.2.0"
pika = "^1.3.2"
hiredis = "^2.3.2"
numpy = "^1.26.4"
astropy = "^6.0.1"
fits2image = "^0.4.7"
boto3 = "^1.34.77"
scikit-image = "^0.23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
